| Bug #5277 | Views: crash if HANDLER | ||
|---|---|---|---|
| Submitted: | 28 Aug 2004 3:12 | Modified: | 10 Sep 2004 12:17 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[28 Aug 2004 3:12]
Peter Gulutzan
[28 Aug 2004 6:11]
MySQL Verification Team
Verified with latest BK source. Thank you for the bug report.
[7 Sep 2004 7:43]
Oleksandr Byelkin
ChangeSet 1.1750 04/09/07 10:42:23 bell@sanja.is.com.ua +3 -0 requre BASE TABLE for HANDLER (BUG#5277)
[10 Sep 2004 12:17]
Oleksandr Byelkin
Thank you for bugreport! Bugfix is pushed into source repository!
