requre BASE TABLE for HANDLER (BUG#5277)